--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
 
+    <section class="controls">
+        <button id="new-file">新文件</button>
+        <button id="open-file">打开文件</button>
+        <button id="save-markdown" disabled>保存文件</button>
+        <button id="save-html">保存预览</button>
+        <button id="show-file" disabled>显示文件</button>
+        <button id="open-in-default" disabled>用默认应用打开</button>
+    </section>
+
+    <section class="content">
+        <label for="markdown" hidden>Markdown</label>
+        <div class="raw-markdown" id="markdown" contenteditable="true"></div>
+        <div class="rendered-html" id="html"></div>
+    </section>
     
     <script>
         require('./scripts/main')
