Add the minimal application implement.

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -14,6 +14,7 @@
         <button id="open-file">打开文件</button>
         <button id="save-markdown" disabled>保存文件</button>
         <button id="save-html">保存预览</button>
+        <button id="save-pdf">生成 PDF</button>
         <button id="show-file" disabled>显示文件</button>
         <button id="open-in-default" disabled>用默认应用打开</button>
     </section>
