Add little feature `swap views'.

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -17,6 +17,7 @@
         <button id="save-pdf">生成 PDF</button>
         <button id="show-file" disabled>显示文件</button>
         <button id="open-in-default" disabled>用默认应用打开</button>
+        <button id="swap">交换视图</button>
     </section>
 
     <section class="content">
