--- a/app/view/index.html
+++ b/app/view/index.html
@@ -18,6 +18,7 @@
         <button id="show-file" disabled>显示文件</button>
         <button id="open-in-default" disabled>用默认应用打开</button>
         <button id="swap">交换视图</button>
+        <button id="theme">切换主题</button>
     </section>
 
     <section class="content">
