Unavailable update: Attempting to add word-cloud implementation

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -26,9 +26,14 @@
         <div class="raw-markdown" id="markdown" contenteditable="true"></div>
         <div class="rendered-html" id="html"></div>
     </section>
+
+    <section>
+        <div id="word-cloud"></div>
+    </section>
     
     <script>
         require('./scripts/main')
+        require('./scripts/word-cloud')
     </script>
 </body>
 </html>
