--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,25 +9,28 @@
 </head>
 <body>
 
-    <section class="controls">
-        <button id="new-file">新文件</button>
-        <button id="open-file">打开文件</button>
-        <button id="save-markdown" disabled>保存文件</button>
-        <button id="save-html">保存预览</button>
-        <button id="save-pdf">生成 PDF</button>
-        <button id="show-file" disabled>显示文件</button>
-        <button id="open-in-default" disabled>用默认应用打开</button>
-        <button id="swap">交换视图</button>
-        <button id="theme">切换主题</button>
-    </section>
+    <div id="container">
+        <section class="controls">
+            <button id="new-file">新文件</button>
+            <button id="open-file">打开文件</button>
+            <button id="save-markdown" disabled>保存文件</button>
+            <button id="save-html">保存预览</button>
+            <button id="save-pdf">生成 PDF</button>
+            <button id="show-file" disabled>显示文件</button>
+            <button id="open-in-default" disabled>用默认应用打开</button>
+            <button id="swap">交换视图</button>
+            <button id="theme">切换主题</button>
+        </section>
+    
+        <section class="content">
+            <label for="markdown" hidden>Markdown</label>
+            <div class="raw-markdown" id="markdown" contenteditable="true"></div>
+            <div class="rendered-html" id="html"></div>
+        </section>
+    
+    </div>
 
-    <section class="content">
-        <label for="markdown" hidden>Markdown</label>
-        <div class="raw-markdown" id="markdown" contenteditable="true"></div>
-        <div class="rendered-html" id="html"></div>
-    </section>
-
-    <section>
+    <section id="word-cloud-container">
         <div id="word-cloud"></div>
     </section>
     
