--- a/app/view/index.html
+++ b/app/view/index.html
@@ -13,7 +13,7 @@
         <section class="controls">
             <button id="new-file">新文件</button>
             <button id="open-file">打开文件</button>
-            <button id="save-markdown" disabled>保存文件</button>
+            <button id="save-markdown">保存文件</button>
             <button id="save-html">保存预览</button>
             <button id="save-pdf">生成 PDF</button>
             <button id="show-file" disabled>显示文件</button>
