Update: Add README.md

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div id="container">
+    <div class="container">
         <section class="controls">
             <button id="save-html">保存预览</button>
             <button id="save-pdf">生成 PDF</button>
