--- a/app/view/index.html
+++ b/app/view/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' content-src *">
     <title>Mapy</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
@@ -18,7 +17,7 @@
     
         <section class="content">
             <label for="markdown" hidden>Markdown</label>
-            <div class="raw-markdown" id="markdown" contenteditable="true"></div>
+            <div class="raw-markdown" id="markdown"></div>
             <div class="rendered-html" id="html"></div>
         </section>
     </div>
