--- a/app/view/index.html
+++ b/app/view/index.html
@@ -5,6 +5,7 @@
     <title>Mapy</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+    <link rel="stylesheet" type="text/css" href="../../node_modules/highlight.js/styles/monokai-sublime.min.css">
 </head>
 <body>
 
