--- a/app/view/index.html
+++ b/app/view/index.html
@@ -6,6 +6,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
     <link rel="stylesheet" type="text/css" href="../../node_modules/highlight.js/styles/monokai-sublime.min.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/katex/dist/katex.min.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/markdown-it-texmath/css/texmath.css">
 </head>
 <body>
 
