Update: Try to add new style for codeblocks. They're unavailable now.

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>Mapy</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/codeblock.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/highlight.js/styles/monokai-sublime.min.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/katex/dist/katex.min.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/markdown-it-texmath/css/texmath.css">
@@ -24,8 +25,8 @@
     </section>
     
     <script>
-        require('./scripts/main')
-        require('./scripts/word-cloud')
+        require("./scripts/main")
+        require("./scripts/word-cloud")
     </script>
 </body>
 </html>
