--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../../node_modules/highlight.js/styles/monokai-sublime.min.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/katex/dist/katex.min.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/markdown-it-texmath/css/texmath.css">
+    <link rel="stylesheet" type="text/css" href="styles/mermaid.css">
+
 </head>
 <body>
 
