Update: Customize the UI style as a night theme

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="../../node_modules/katex/dist/katex.min.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/markdown-it-texmath/css/texmath.css">
     <link rel="stylesheet" type="text/css" href="styles/mermaid.css">
+    <link rel="stylesheet" type="text/css" href="styles/detail-tag.css">
+    
 
 </head>
 <body>
@@ -24,7 +26,6 @@
 
     <script>
         require("./scripts/main")
-        require("./scripts/word-cloud")
     </script>
 </body>
 </html>
