--- a/app/view/styles/main.css
+++ b/app/view/styles/main.css
@@ -13,6 +13,8 @@ html, body {
 }
 
 body {
+    background-color: #23241f;
+    color: antiquewhite;
     margin: 0;
     padding: 0;
     position: relative;
@@ -26,31 +28,6 @@ textarea, input, div, button {
     outline: none;
     margin: 0;
 }
-
-.controls {
-    background-color: rgb(217, 241, 238);
-    padding: 10px 10px 10px 10px;
-}
-
-button {
-    font-size: 14px;
-    background-color: rgb(181, 220, 216);
-    border: none;
-    padding: 0.5em 1em;
-}
-
-button:hover {
-    background-color: rgb(156, 198, 192);
-}
-
-button:active {
-    background-color: rgb(144, 182, 177);
-}
-
-button:disabled {
-    background-color: rgb(196, 204, 202);
-}
-
 
 
 .content {
@@ -68,8 +45,8 @@ button:disabled {
 }
 
 .raw-markdown {
-    border: 5px solid rgb(238, 252, 250);
-    background-color: rgb(238, 252, 250);
+    border: 5px solid #23241f;
+    color: rgb(238, 252, 250);
     font-family: monospace;
 }
 
@@ -131,4 +108,33 @@ eq, code, li {
     top: 30%;
     left: 30%;
     z-index: 9999;
+}
+
+@media (prefers-color-scheme: dark) {
+    img {
+      opacity: .75;
+      transition: opacity .5s ease-in-out;
+    }
+    img:hover {
+      opacity: 1;
+    }
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 0;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent
+}
+::-webkit-scrollbar-thumb {
+    background-color: #abb09f;
+}
+
+a {
+    color: aquamarine;
+}
+
+.cm-line {
+    padding-right: 5px;
 }
