--- a/app/view/styles/main.css
+++ b/app/view/styles/main.css
@@ -20,11 +20,11 @@ body {
     position: relative;
 }
 
-body, input {
+body {
     font: menu;
 }
 
-textarea, input, div, button {
+div {
     outline: none;
     margin: 0;
 }
@@ -58,69 +58,7 @@ textarea, input, div, button {
     line-height: 1.5;
     text-indent: 2em;
     text-align: left;
-}
-
-pre {
-    width: 100%;
-    font-size: large;
-    border-radius: 10px;
-    background-color: #23241f;
-    counter-reset: linecounter;
-}
-
-pre .line-num {
-    min-width: 3ch;
-    display: inline-block;
-}
-
-pre .line-num::before {
-    counter-increment: linecounter;
-    content: counter(linecounter);
-    color: grey;
-}
-
-.table-of-contents li {
-    list-style-type: none;
-}
-
-.table-of-contents a {
-    text-decoration: none;
-    color: gray;
-}
-  
-
-.raw-markdown > p, blockquote {
-    display: inline-block;
-    word-break: break-all;
-    overflow-wrap: break-word;
-}
-
-.rendered-html p + p {
-    margin-bottom: 20px;
-}
-
-eq, code, li {
-    text-indent: 0;
-}
-
-#word-cloud {
-    width: 600px;
-    height: 400px;
-    backdrop-filter: blur(10px);
-    opacity: 0.5;
-    top: 30%;
-    left: 30%;
-    z-index: 9999;
-}
-
-@media (prefers-color-scheme: dark) {
-    img {
-      opacity: .75;
-      transition: opacity .5s ease-in-out;
-    }
-    img:hover {
-      opacity: 1;
-    }
+    width: 80cqw;
 }
 
 ::-webkit-scrollbar {
@@ -132,10 +70,6 @@ eq, code, li {
 }
 ::-webkit-scrollbar-thumb {
     background-color: #abb09f;
-}
-
-a {
-    color: aquamarine;
 }
 
 .cm-line {
