Clean up. Note: Searching logic is unavailable. See also the console error info.

--- a/app/view/styles/article.css
+++ b/app/view/styles/article.css
@@ -83,6 +83,10 @@ eq, code, li {
     text-indent: 0;
 }
 
+mark {
+    border-radius: 3px;
+}
+
 #word-cloud {
     width: 600px;
     height: 400px;
