Update: implement convenient footnote and sidenote support

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../../node_modules/markdown-it-texmath/css/texmath.css">
     <link rel="stylesheet" type="text/css" href="styles/mermaid.css">
     <link rel="stylesheet" type="text/css" href="styles/detail-tag.css">
+    <link rel="stylesheet" type="text/css" href="styles/checkbox.css">
 
 </head>
 <body>
