--- a/app/view/index.html
+++ b/app/view/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="styles/mermaid.css">
     <link rel="stylesheet" type="text/css" href="styles/detail-tag.css">
     <link rel="stylesheet" type="text/css" href="styles/checkbox.css">
-
+    <link rel="stylesheet" href="styles/font-awesome.css">
+ 
 </head>
 <body>
     <div class="search">
