Update: Add an algorithm for sorting plans on calender. It will be used in the future

--- a/app/view/styles/article.css
+++ b/app/view/styles/article.css
@@ -202,3 +202,8 @@ aside {
     margin: 0 .05em 0 .1em;
     vertical-align: 0.1em;
 }
+
+.bi-directional-link {
+    text-decoration: none;
+    color: cyan;
+}
