--- a/app/view/styles/main.css
+++ b/app/view/styles/main.css
@@ -1,9 +1,9 @@
 @import "app.css";
 @import "article.css";
 @import "codeblock.css";
-@import "../../node_modules/highlight.js/styles/monokai-sublime.min.css";
-@import "../../node_modules/katex/dist/katex.min.css";
-@import "../../node_modules/markdown-it-texmath/css/texmath.css";
+@import "../../../node_modules/highlight.js/styles/monokai-sublime.min.css";
+@import "../../../node_modules/katex/dist/katex.min.css";
+@import "../../../node_modules/markdown-it-texmath/css/texmath.css";
 @import "mermaid.css";
 @import "detail-tag.css";
 @import "checkbox.css";
