--- a/app/view/styles/app.css
+++ b/app/view/styles/app.css
@@ -1,3 +1,5 @@
+@import "common-font.css";
+
 html {
     box-sizing: border-box;
 }
@@ -21,7 +23,7 @@ body {
 }
 
 body {
-    font: menu;
+    font-family: XialuWenkai;
 }
 
 div {
@@ -40,7 +42,7 @@ div {
     max-width: 50%;
     flex-grow: 1;
     overflow-y: scroll;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .raw-markdown {    
