--- a/app/view/styles/codeblock.css
+++ b/app/view/styles/codeblock.css
@@ -1,6 +1,9 @@
+code {
+    font-family: Hack !important;
+}
 .codeblock {
     width: 80%;
-    font-size: 16px;
+    font-size: 20px;
     display: block;
     align-items: center;
     justify-content: center;
